<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urc_hw</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhiwan13579@126.com">keseterg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>urc_util</depend>
  <depend>urc_nanopb</depend>
  <depend>nanopb</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>