<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urc_manipulation</name>
  <version>0.0.0</version>
  <description>Package for controlling any manipulation devices on the rover.</description>
  <maintainer email="matthew.scott.hannay@gmail.com">matthewhannay</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_common</depend>

  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>launch_param_builder</exec_depend>
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>urc_arm_moveit_config</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
